<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Clausura</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_detail">Details</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_edit_exam" translatable="false">EditExamActivity</string>
    <string name="title_activity_create_or_edit" translatable="false">CreateOrEditActivity</string>
    <string name="title_activity_exam_details" translatable="false">ExamDetailsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_exam_edit">Bearbeiten</string>
    <string name="title_activity_backup_restore">Datensicherung</string>
    <string name="button_backup">Sichern</string>
    <string name="button_restore">Wiederherstellen</string>
    <string name="text_backup_info">"Hier kannst Du eine Sicherungskopie aller Termine"
        "anlegen.\n\nDie Daten werden im Ordner \n\"Documents\\Clausura\" gespeichert. \nVon dort"
        "aus kannst Du sie z.B. auf ein anderes Gerät kopieren. \n\nDafür"
        "muss Clausura auf Deinen Speicher zugreifen dürfen!"
    </string>
    <string name="text_permission_denied_restore">Keine Berechtigung gewährt. Wiederherstellen fehlgeschlagen.</string>
    <string name="text_permission_denied_backup">Keine Berechtigung gewährt. Backup fehlgeschlagen.</string>
    <string name="dialog_backup_success">Daten erfolgreich gesichert!</string>
    <string name="dialog_backup_fail_permission">Sicherung der Daten fehlgeschlagen, da kein Speicherzugriff gewährt wurde!</string>
    <string name="dialog_restore_success">Daten erfolgreich wiederhergestellt!</string>
    <string name="dialog_restore_fail_permission">Wiederherstellung der Daten fehlgeschlagen, da kein Speicherzugriff gewährt wurde!</string>
    <string name="dialog_backup_fail_other">Sicherung der Daten fehlgeschlagen!</string>
    <string name="dialog_restore_fail_other">Wiederherstellung der Daten fehlgeschlagen!</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="title_choose_backup">Sicherung auswählen</string>
    <string name="dialog_restore_fail_no_backups">Es sind noch keine Sicherungen vorhanden!</string>
    <string name="text_backup_from">Sicherung vom</string>
    <string name="text_backup_file_prefix">Clausura Sicherung</string>
    <string name="hint_title">Titel</string>
    <string name="hint_date">Datum</string>
    <string name="hint_time">Uhrzeit</string>
    <string name="hint_location">Ort hinzufügen</string>
    <string name="hint_notes">Notiz hinzufügen</string>
    <string name="button_delete">Entfernen</string>
    <string name="button_work">Lernen</string>
    <string name="button_edit">Bearbeiten</string>
    <string name="text_end_of_lecture">Ende der Vorlesungszeit</string>
    <string name="text_tomorrow">Morgen</string>
    <string name="text_today">Heute</string>
    <string name="text_yesterday">Gestern</string>
    <string name="text_x_days_ago">Vor %1$d Tagen</string>
    <string name="text_in_x_days">In %1$d Tagen</string>
    <string name="text_copyright">© 2016 Nico Assfalg</string>
    <string name="button_update">Update suchen</string>
    <string name="button_close">Schließen</string>
    <string name="button_license">Lizenz</string>
    <string name="text_license">MIT License\n\n
Copyright © 2017 Nico Aßfalg\n\n
Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n\n
The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.\n\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
</string>
    <string name="text_about_headline">Info</string>
    <string name="shortcut_add_short">Neue Klausur</string>
    <string name="shortcut_add_long">Eine neue Klausur hinzufügen</string>
    <string name="shortcut_add_disabled">Hinzufügen nicht möglich!</string>
    <string name="text_logo_credit">Logo von Niklas Braun</string>
    <string name="text_no_exams">Willkommen bei Clausura. \nTrage jetzt deine erste Klausur ein!</string>
    <string name="text_no_exams_past">Keine Klausuren zum Anzeigen vorhanden.</string>
    <string name="button_show_past_plural">%1$d vergangene Termine zeigen</string>
    <string name="button_show_past_singular">Vergangenen Termin zeigen</string>
    <string name="text_update_available">Update verfügbar!</string>
    <string name="button_download">Herunterladen</string>
    <string name="text_version">Version</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="text_settings_head_ui">Darstellung</string>
    <string name="text_show_past">Vergangene Termine anzeigen</string>
    <string name="text_show_pinned">Hervorgehobener Termin</string>
    <string name="text_show_pinned_description">wird immer oben angezeigt</string>
    <string name="text_pinned_title">Titel des hervorgehobenen Termins</string>
    <string name="text_about_clausura">Über Clausura…</string>
    <string name="text_pinned_date">Datum des hervorgehobenen Termins</string>
    <string name="button_save">Speichern</string>
    <string name="text_error_empty">Ende der Vorlesungszeit</string>
    <string name="text_about_joda">Über Joda-Time…</string>
</resources>