<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="25">
    <shortcut
        android:shortcutId="add"
        android:enabled="true"
        android:icon="@drawable/ic_create_black_24dp"
        android:shortcutShortLabel="@string/shortcut_add_short"
        android:shortcutLongLabel="@string/shortcut_add_long"
        android:shortcutDisabledMessage="@string/shortcut_add_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="de.nico_assfalg.apps.android.clausura.activity"
            android:targetClass=".ExamEditActivity">
            <extra
                android:name="KEY_EXTRA_EXAM_ID"
                android:value="0"/>
        </intent>
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>