<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.nico_assfalg.apps.android.clausura.activity.ExamEditActivity"
    tools:showIn="@layout/activity_exam_edit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/hint_title"
                android:inputType="text"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editDate"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:cursorVisible="false"
                android:editable="false"
                android:ems="10"
                android:hint="@string/hint_date"
                android:inputType="none"
                tools:clickable="false" />

            <EditText
                android:id="@+id/editTime"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/hint_time"
                android:inputType="time" />

            <EditText
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/hint_location"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editNotes"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/hint_notes"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
