<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.nico_assfalg.apps.android.clausura.activity.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/layoutSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textUI"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:text="@string/text_settings_head_ui"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layoutShowPast"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="?attr/selectableItemBackground">

                <Switch
                    android:id="@+id/switchShowPast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/switchShowPast"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textShowPast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_show_past"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layoutShowPinned"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="?attr/selectableItemBackground">

                <Switch
                    android:id="@+id/switchShowPinned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/switchShowPinned"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textShowPinned"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_show_pinned"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                    <TextView
                        android:id="@+id/textShowPinnedDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_show_pinned_description"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:visibility="visible" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layoutPinnedText"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textPinnedText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_pinned_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                    <TextView
                        android:id="@+id/textPinnedTextValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="textPinnedTextValue"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layoutPinnedDate"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="?attr/selectableItemBackground"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textpinnedDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_pinned_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                    <TextView
                        android:id="@+id/textPinnedDateValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="textPinnedDateValue"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textInfo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:text="@string/text_about_headline"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layoutInfo"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textShowInfoDialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_about_clausura"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
